--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashActivity"
-    android:background="@color/cardview_dark_background">
+    android:background="@color/design_default_color_error">
 
     <LinearLayout
         android:layout_width="892dp"
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
-            android:src="@drawable/logo" />
+            android:src="@drawable/ic_arkanmusic_foreground" />
 
         <TextView
             android:id="@+id/name_app"
@@ -29,7 +29,7 @@
             android:layout_height="153dp"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/font"
-            android:text="Arkanoid"
+            android:text="ArkanMusic"
             android:textAlignment="center"
             android:textColor="@android:color/secondary_text_dark"
             android:textColorLink="@color/white"
