- modifica proporzioni fragment e Activity per tablet

--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -7,63 +7,87 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/background_one"
             android:layout_width="match_parent"
-            android:scaleType="fitXY"
             android:layout_height="match_parent"
+            android:scaleType="fitXY"
             android:src="@drawable/sfondophone" />
 
         <ImageView
             android:id="@+id/background_two"
             android:layout_width="match_parent"
-            android:scaleType="fitXY"
             android:layout_height="match_parent"
+            android:scaleType="fitXY"
             android:src="@drawable/sfondophone" />
 
     </FrameLayout>
 
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="188dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="104dp"
-        app:layout_constraintBottom_toTopOf="@+id/guest_button"
+    <ImageButton
+        android:background="@drawable/ic_info"
+        android:id="@+id/infoImageButton"
+        android:layout_width="@dimen/height_square_button_Tablet"
+        android:layout_height="@dimen/height_square_button_Tablet"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/arkanTextView"
-        app:layout_constraintVertical_bias="0.217"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/guest_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/guest_button"
-        android:textSize="@dimen/font_size_Tablet"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.76" />
 
-    <TextView
-        android:id="@+id/arkanTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ArkanMusic"
-        android:textColor="#FFFFFF"
-        android:textSize="@dimen/font_size_Title_Tablet"
+    <LinearLayout
+        android:layout_width="927dp"
+        android:layout_height="631dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.112" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_logo_Tablet"
+            android:src="@drawable/ic_arkanmusic_foreground"
+            app:layout_constraintBottom_toTopOf="@+id/arkanTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/arkanTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ArkanMusic"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/font_size_Title_Tablet"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.112" />
+
+        <Button
+            android:id="@+id/guest_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="50dp"
+            android:text="@string/guest_button"
+            android:textSize="@dimen/font_size_Tablet" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="@dimen/width_square_button_Tablet"
+            android:layout_height="@dimen/height_square_button_Tablet"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            app:buttonSize="icon_only"
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
