--- a/app/src/main/res/layout-sw600dp/loading_dialog.xml
+++ b/app/src/main/res/layout-sw600dp/loading_dialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/height_logo"
         android:scrollbarSize="@dimen/font_size_Tablet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/grobold"
         android:text="loading message"
         android:textSize="@dimen/font_size_Tablet"
         app:layout_constraintEnd_toEndOf="parent"
