--- a/app/src/main/res/layout-sw600dp/row_layout_levels_created.xml
+++ b/app/src/main/res/layout-sw600dp/row_layout_levels_created.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +13,6 @@
         android:layout_height="@dimen/height_logo"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:scrollbarSize="@dimen/font_size_Tablet"
         android:src="@drawable/ic_brick2" />
 
     <TextView
@@ -20,34 +20,34 @@
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="29dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
+        android:textSize="@dimen/font_size_Title_no_Tablet"
         android:layout_toRightOf="@+id/image"
         android:fontFamily="@font/font"
         android:singleLine="true"
-        android:text="Level"
-        android:textSize="@dimen/font_size_Tablet" />
+        android:text="Level" />
 
-    <TextView
-        android:id="@+id/textViewAuthor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nicknamePlayer"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="4dp"
-        android:layout_toEndOf="@+id/image"
-        android:text="@string/author_level"
-        android:textSize="@dimen/font_size_Title_no_Tablet2" />
+    <ImageButton
+        android:id="@+id/editButton"
+
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_toStartOf="@+id/playButton"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_edit_24" />
 
     <ImageButton
         android:id="@+id/playButton"
-        android:layout_width="@dimen/width_square_button_Tablet"
-        android:layout_height="@dimen/height_square_button_Tablet"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
         android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/ic_play" />
+        android:src="@drawable/ic_baseline_delete_24" />
 
 </RelativeLayout>
