--- a/app/src/main/res/layout-sw600dp/activity_settings.xml
+++ b/app/src/main/res/layout-sw600dp/activity_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,10 +39,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.112" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="start"
             android:orientation="horizontal">
 
@@ -54,9 +54,10 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/font"
                 android:text="@string/imposta_lingua"
-                android:textAlignment="gravity"
+                android:layout_marginRight="20dp"
+                android:textAlignment="center"
                 android:textColor="#0066ff"
-                android:textSize="@dimen/font_size_no_Tablet" />
+                android:textSize="@dimen/font_size_Tablet_settings_title_option" />
 
             <RadioGroup
                 android:id="@+id/groupLanguage"
@@ -69,6 +70,7 @@
                     android:id="@+id/radioEsp"
                     android:layout_width="73dp"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_size_Tablet_settings"
                     android:fontFamily="@font/font"
                     android:text="@string/esp" />
 
@@ -76,6 +78,7 @@
                     android:id="@+id/radioIta"
                     android:layout_width="74dp"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_size_Tablet_settings"
                     android:fontFamily="@font/font"
                     android:text="@string/ita" />
 
@@ -83,6 +86,7 @@
                     android:id="@+id/radioEng"
                     android:layout_width="81dp"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_size_Tablet_settings"
                     android:fontFamily="@font/font"
                     android:text="@string/eng" />
 
@@ -93,12 +97,12 @@
         <TextView
             android:id="@+id/textViewSetControlSystem"
             android:layout_width="match_parent"
-            android:layout_height="29dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/font"
             android:text="@string/imposta_sistema_di_controllo"
             android:textAlignment="center"
             android:textColor="#0066ff"
-            android:textSize="@dimen/font_size_no_Tablet" />
+            android:textSize="@dimen/font_size_Tablet_settings_title_option" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -140,12 +144,12 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="23dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/font"
             android:text="@string/imposta_esistenza_audio"
             android:textAlignment="center"
             android:textColor="#0066ff"
-            android:textSize="@dimen/font_size_no_Tablet" />
+            android:textSize="@dimen/font_size_Tablet_settings_title_option" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -186,10 +190,12 @@
 
         <Button
             android:id="@+id/button_save"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/font"
             android:layout_gravity="center"
+            android:fontFamily="@font/font"
+            android:layout_marginTop="20dp"
+            android:textSize="@dimen/font_size_Tablet_settings"
             android:text="@string/save_label" />
 
     </LinearLayout>
