--- a/app/src/main/res/layout-sw600dp/fragment_offline.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_offline.xml
@@ -20,14 +20,14 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/height_logo"
+                android:layout_height="@dimen/height_logo_Tablet"
                 android:src="@drawable/ic_wifi_off" />
 
             <TextView
@@ -39,7 +39,7 @@
                 android:layout_marginBottom="50dp"
                 android:gravity="center"
                 android:text="@string/offline_label_title"
-                android:textSize="@dimen/font_size_Title_no_Tablet2"
+                android:textSize="@dimen/font_size_Title_Tablet"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/offline_label_subtitle"
-                android:textSize="@dimen/font_size_no_Tablet" />
+                android:textSize="@dimen/font_size_Tablet" />
 
 
 
