- implementata logica uscita volontaria dal multiplayer

--- a/app/src/main/res/layout/game_interrupt_dialog.xml
+++ b/app/src/main/res/layout/game_interrupt_dialog.xml
@@ -22,47 +22,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageButton
-                android:id="@+id/imageButtonResume"
-                android:layout_width="@dimen/width_square_button_Tablet"
-                android:layout_height="@dimen/height_square_button_Tablet"
-                android:background="@drawable/ic_play"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.716"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.68" />
-
-            <ImageButton
+            <Button
                 android:id="@+id/imageButtonExitGame"
-                android:layout_width="@dimen/width_square_button_Tablet"
-                android:layout_height="@dimen/height_square_button_Tablet"
-                android:layout_marginStart="44dp"
-                android:background="@drawable/ic_exit_game_multiplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="116dp"
                 android:clickable="true"
-                android:rotation="180"
+                android:rotation="0"
+                android:text="ok"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageButtonResume"
                 app:layout_constraintHorizontal_bias="0.421"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.68" />
+                app:layout_constraintVertical_bias="0.746" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="36dp"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="30dp"
-                
+                android:layout_marginBottom="36dp"
+
                 android:gravity="center"
-                android:text="@string/menu_pause"
+                android:text="@string/interrupt_message"
                 android:textColor="#0066ff"
-                android:textSize="@dimen/font_size_Title_no_Tablet"
+                android:textSize="@dimen/font_size_Title_no_Tablet2"
                 app:layout_constraintBottom_toTopOf="@+id/imageButtonExitGame"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
