- implementata logica di controllo vincita del gioco in multiplayer

--- a/app/src/main/res/layout/pause_game_dialog.xml
+++ b/app/src/main/res/layout/pause_game_dialog.xml
@@ -40,7 +40,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="44dp"
-                android:background="@drawable/ic_exit_game_multiplayer"
+                android:background="@drawable/ic_exit_game"
                 android:clickable="true"
                 android:rotation="180"
                 app:layout_constraintBottom_toBottomOf="parent"
