- logica di vincita del gioco con Dialog in arcade e editor mode - modificato landscape DialogResultGame in arcade mode - modificato landscape splashscreen

--- a/app/src/main/res/layout/game_interrupt_dialog.xml
+++ b/app/src/main/res/layout/game_interrupt_dialog.xml
@@ -39,13 +39,12 @@
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="36dp"
-
                 android:gravity="center"
                 android:text="@string/interrupt_message"
                 android:textColor="#0066ff"
