--- a/app/src/main/res/layout-sw600dp/activity_multiplayer.xml
+++ b/app/src/main/res/layout-sw600dp/activity_multiplayer.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="150dp"
+            android:layout_gravity="center"
             android:text="@string/multiplayer_mode"
             android:textAlignment="center"
             android:textColor="#0066FF"
