--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -59,8 +59,9 @@
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/button_settings"
-                android:layout_width="389dp"
-                android:layout_height="55dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:fontFamily="@font/font"
                 android:src="@drawable/ic_baseline_settings_24"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +71,7 @@
                 android:id="@+id/floatingActionLogoutButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:clickable="true"
                 android:contentDescription="TODO"
                 android:rotation="180"
