--- a/app/src/main/res/layout/game_over_dialog.xml
+++ b/app/src/main/res/layout/game_over_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:visibility="visible">
@@ -23,36 +24,16 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/shareButton"
-                android:layout_width="@dimen/font_size_no_Tablet"
-                android:layout_height="@dimen/font_size_no_Tablet"
-                android:layout_gravity="right"
-                android:background="@drawable/ic_baseline_share_24"
-                tools:layout_editor_absoluteX="18dp" />
-
-            <ImageView
-                android:id="@+id/imageResultGame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.064"></ImageView>
-
             <TextView
                 android:id="@+id/resultGameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
                 android:gravity="center"
                 android:text="resultGame"
-                android:textSize="@dimen/font_size_Tablet_settings"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,29 +47,19 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="score"
-                android:textSize="@dimen/font_size_Tablet_settings"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/buttonGoOn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/resultGameTextView" />
 
-            <TextView
-                android:id="@+id/textViewRecord"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="TextView"
-                android:textSize="@dimen/font_size_no_Tablet" />
-
             <Button
                 android:id="@+id/buttonGoOn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="117dp"
+                android:layout_height="61dp"
                 android:layout_gravity="center"
-                android:layout_marginRight="50dp"
                 android:layout_marginLeft="50dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginRight="50dp"
                 android:text="@string/avanti"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
