--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/font"
-            android:text="Luca Ciscutti\nDavide Bancone\nDomenico Laiso\nJavier Diaz"
+            android:text="Luca Ciscutti\nDavide Bancone\nDomenico Laiso"
             android:textAlignment="center"
             android:textColor="@android:color/secondary_text_dark"
             android:textSize="24sp" />
