--- a/app/src/main/res/layout-sw600dp/activity_menu.xml
+++ b/app/src/main/res/layout-sw600dp/activity_menu.xml
@@ -28,8 +28,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="605dp"
-        android:layout_height="599dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,6 +147,14 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/font"
             android:text="@string/classifica"
+            android:textSize="@dimen/font_size_Tablet" />
+
+        <Button
+            android:id="@+id/button_exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/font"
+            android:text="@string/exit_app"
             android:textSize="@dimen/font_size_Tablet" />
 
     </LinearLayout>
