- layout game_interrupt_dialog modificato - modifica multilingua - revisione Multiplayer

--- a/app/src/main/res/layout/game_interrupt_dialog.xml
+++ b/app/src/main/res/layout/game_interrupt_dialog.xml
@@ -18,44 +18,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textViewMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:text="@string/interrupt_message"
+                android:textColor="#0066ff"
+                android:textSize="@dimen/font_size_Title_no_Tablet2"
+                 />
             <Button
                 android:id="@+id/imageButtonExitGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="116dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
                 android:clickable="true"
                 android:rotation="0"
-                android:text="ok"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButtonResume"
-                app:layout_constraintHorizontal_bias="0.421"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.746" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginBottom="36dp"
-                android:gravity="center"
-                android:text="@string/interrupt_message"
-                android:textColor="#0066ff"
-                android:textSize="@dimen/font_size_Title_no_Tablet2"
-                app:layout_constraintBottom_toTopOf="@+id/imageButtonExitGame"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:text="ok" />
+        </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
