--- a/app/src/main/res/layout/pause_game_dialog.xml
+++ b/app/src/main/res/layout/pause_game_dialog.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintVertical_bias="0.68" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textViewMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
